--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "realrashid/sweet-alert": "^7.3"
+        "realrashid/sweet-alert": "^7.3",
+        "yajra/laravel-datatables": "12.0",
+        "yajra/laravel-datatables-oracle": "12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
